2011-11-09  6.7.3-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-5, SVN revision 5936

2011-11-07  6.7.3-4 Cristy  <quetzlzacatenango@image...>
  * Add ShearRotateImage() method.  RotateImage() now uses distorts rather
    than shears.
  * MagickCoreGenesis() path must be accessible to use (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19795).

2011-11-06  6.7.3-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-4, SVN revision 5876

2011-11-02  6.7.3-4 Glenn Randers-Pehrson <glennrp@image...>
  * Ensure that the GIF encoder writes a large enough logical screen (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19734).

2011-11-02  6.7.3-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-3, SVN revision 5825

2011-11-02  6.7.3-3 Cristy  <quetzlzacatenango@image...>
  * Fix small memory leak in the TIFF coder.
  * Support -debug accelerate option.
  * Support -includearch-dir and -sharearch-dir configure option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19720).
  * Use Pango to improve the caption coder.

2011-11-01  6.7.3-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-2, SVN revision 5718

2011-11-01  6.7.3-2 Cristy  <quetzlzacatenango@image...>
  * Support Ghostscript under 64-bit Windows (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19659).
  * Correct affine translation for certain SVG files (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19664).
  * -evaluate-sequence multiply no longer hangs ereference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19549).

2011-10-15  6.7.3-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-1.

2011-10-15  6.7.3-1 Cristy  <quetzlzacatenango@image...>
  * Read TIFF EXIF profile before reading the image data.
  * Fix "test: no: unexpected operator" in the configure script (reference